examples/datalog/12_errors/27_unbound_head_var_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unbound_head
Knowledge graph 'test_unbound_head' created.
Switched to knowledge graph: test_unbound_head
> .kg use test_unbound_head
Switched to knowledge graph: test_unbound_head
> +edges[(1, 2), (2, 3)].
Inserted 2 fact(s) into 'edges'.
> +bad_rule(X, Y, Z) :- edges(X, Y).
Script error: Failed to register rule: Unsafe rule 'bad_rule': Head variable(s) Z not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
